--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dotfiles"]
 	path = dotfiles
 	url = https://github.com/Pa-Pi-Pudding/dotfiles/
+[submodule "prezto"]
+	path = prezto
+	url = https://github.com/Pa-Pi-Pudding/prezto/
